Added s FHIR stratifier for a Custodian

--- a/src/main/resources/de/samply/common/ldmclient/measure-specimen-stub.json
+++ b/src/main/resources/de/samply/common/ldmclient/measure-specimen-stub.json
@@ -46,6 +46,15 @@
             "language": "text/cql",
             "expression": "SampleMaterialTypeCategory"
           }
+        },
+        {
+          "code": {
+            "text": "Custodian"
+          },
+          "criteria": {
+            "language": "text/cql",
+            "expression": "Custodian"
+          }
         }
       ]
     }
