--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     </parent>
 
     <artifactId>common-ldmclient</artifactId>
-    <version>6.0.1</version>
+    <version>6.1.0</version>
 
     <name>Samply Common LDMClient</name>
     <description>Samply Common LDM Client is an abstract library for the communication with Local Datamanagement systems.</description>
@@ -40,6 +40,16 @@
         <developerConnection>scm:git:https://github.com/samply/common-ldmclient.git</developerConnection>
         <url>https://github.com/samply/common-ldmclient</url>
     </scm>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <share-dto.version>5.3.0</share-dto.version>
+        <gson.version>2.9.1</gson.version>
+        <slf4j-api.version>1.7.36</slf4j-api.version>
+        <httpclient.version>4.5.13</httpclient.version>
+        <guava.version>31.1-jre</guava.version>
+    </properties>
+
     <distributionManagement>
         <snapshotRepository>
             <id>ossrh</id>
@@ -51,16 +61,6 @@
         </repository>
     </distributionManagement>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <share-dto.version>5.3.0</share-dto.version>
-        <skipTests>false</skipTests>
-        <gson.version>2.9.1</gson.version>
-        <slf4j-api.version>1.7.36</slf4j-api.version>
-        <httpclient.version>4.5.13</httpclient.version>
-        <guava.version>31.1-jre</guava.version>
-    </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -70,8 +70,8 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <optional>true</optional>
             <version>${httpclient.version}</version>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>de.samply</groupId>
@@ -89,5 +89,31 @@
             <version>${gson.version}</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>${maven-gpg-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>deploy</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                        <configuration>
+                            <!-- Prevent `gpg` from using pinentry programs -->
+                            <gpgArguments>
+                                <arg>--pinentry-mode</arg>
+                                <arg>loopback</arg>
+                            </gpgArguments>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
