--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     </parent>
 
     <artifactId>common-ldmclient</artifactId>
-    <version>6.1.0</version>
+    <version>6.2.0-SNAPSHOT</version>
 
     <name>Samply Common LDMClient</name>
     <description>Samply Common LDM Client is an abstract library for the communication with Local Datamanagement systems.</description>
